# ClubBrugge2025

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: generate_parquet.py
src/clubbrugge/: io.py  metrics.py
tests/: test_io.py  test_metrics.py
